add new dep: anyhow

--- a/sitegen-rs/Cargo.toml
+++ b/sitegen-rs/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.91"
 handlebars = "6.2.0"
 serde = { version = "1.0", features = ["derive"] }
