--- a/sitegen-rs/Cargo.toml
+++ b/sitegen-rs/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.91"
-handlebars = "6.2.0"
+handlebars = {version = "6.2.0", features=["dir_source"]}
 serde = { version = "1.0", features = ["derive"] }
